# logd

./: README.md  build.sh  configure.ac  copy2release.sh  log.ini  logd.sln  logd.vcxproj
inc/: log.h  logd.h
src/: Makefile.am  logd.c  udp-socket.c
